# yd2d

./: .gitignore  CMakeLists.txt  README.md  main.cpp
include/yd2d/math/: vector2d.hpp
yd2d/: yd2d_game_engine.cpp  yd2d_game_engine.hpp  yd2d_typedef.hpp
yd2d/base/: hwbutton.hpp  keyboard.hpp  mouse.hpp  pixel.hpp  rcode.hpp
yd2d/math/: rect.hpp  size.hpp  vector2d.hpp
yd2d/renderers/: base_renderder.hpp  renderer_gl10_windows.cpp  renderer_gl10_windows.hpp
yd2d/texture/: texture2d.cpp  texture2d.hpp
yd2d/tools/: game_time.hpp  image_utils.hpp
